@@ -1,5 +1,10 @@
 2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/parser.py (_set_margins):
+	Check for tags in the middle of the line.
+
+2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/patterns/Latn.common-error.in:
 	Adjust based on preliminary testing.
 
